# SMA-Crossover-Alerts

./: .coveragerc  .gitignore  README.md  STOCK_COMPARATOR_USAGE.md  STRATEGY_PLAN.md  TESTING_QUICKSTART.md  YAHOO_FINANCE_INTEGRATION_REPORT.md  deploy.sh  install.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
config/: config.sample.ini  logging.conf
src/sma_crossover_alerts/: __init__.py
src/sma_crossover_alerts/analysis/: __init__.py  comparator.py  processor.py
src/sma_crossover_alerts/api/: __init__.py  client.py  data_provider_factory.py  endpoints.py  yahoo_finance_adapter.py
src/sma_crossover_alerts/config/: __init__.py  settings.py  validation.py
src/sma_crossover_alerts/notification/: __init__.py  email_sender.py  templates.py
src/sma_crossover_alerts/utils/: __init__.py  error_coordinator.py  error_handler.py  exceptions.py  logging.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  mock_data.py  test_config.py
tests/integration/: __init__.py  test_api_integration.py  test_comparator_integration.py  test_email_integration.py  test_full_workflow.py  test_integration.py
tests/unit/: __init__.py  test_analysis.py  test_api.py  test_basic.py  test_config.py  test_error_handling.py  test_notification.py  test_working_implementation.py
